<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Misc. -->
    <string name="app_name">QMRDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="CaptureAndPlot">Capture &amp; Plot</string>
    <string name="BrowseAndShare">Browse &amp; Share</string>
    <string name="ProcessData">Process Data</string>
    <string name="QuickStart">Doppler</string>
	<string name="plot_lbl">Plot Here</string>
	<string name="share_lbl">Share Things Here</string>
	<string name="process_lbl">Process Here</string>
	<string name="quick_lbl">Quick Setup Here</string>
    <string name="DrawerOpen">Drawer Open</string>
    <string name="DraweClosed">Drawer Closed</string>
    <string name="appHint">Open the Navigation Drawer to Get Started</string>
    <string name="appHintLand">Open the Navigation Drawer to Get Started</string>
    
    <string name="btSetup">Setup Bluetooth</string>
     
    <!--  BTio  -->
    <string name="cmd_lbl">Command:</string>
    <string name="rcv_lbl">Receive History:</string>
    <string name="send_btn">Send</string>
    <string name="read_btn">Read</string>
    
    <!-- Plotting -->
    <string name="collect">Collect</string>
    <string name="collectSave">Save</string>
    <string name="collectName_lbl">Collection Name:</string>
    <string name="collectName_txt">CollectionName</string>
    <string name="sampNum_txt">2048</string>
    <string name="sampNum_lbl">Number of Samples:</string>
    
    <!--  RDK Pref  -->
    <string name="sweepType">Sweep Type</string>
    <string name="rampTime">Ramp Time</string>
    <string name="refDivider">Reference Divider</string>
    <string name="startFreq">Start Frequency</string>
    <string name="stopFreq">Stop Frequency</string>
    <string name="ramptimeTitle">Enter integer. Range (ms) = 1:65536</string>
    <string name="refDividerTitle">Enter integer. Range = 1:256</string>
    <string name="FreqTitle">Range (GHz) = 2.4:2.5</string>
    <string name="defaultMode"> Default Mode</string>
    
    <!--  RDK Pref  -->
    <string name="uploadpress">Upload</string>
    <string name="chooseFiles">Choose file(s) below to upload:</string>
    
    <!--  -->
    <string-array name="drawerList">
        <item>Collect and Plot</item>
        <item>Share</item>
        <item>Doppler Radar</item>
        <item>Bluetooth I/O</item>
        <item>Settings</item>
    </string-array>
    <string name="save">Save</string>
</resources>
