<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plotFragLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/DopplerPlotLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_toLeftOf="@+id/btnLayout"
        android:orientation="vertical"
        android:weightSum="1" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:id="@+id/sampNum_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sampNum_lbl" />

        <EditText
            android:inputType="number"
            android:imeOptions="actionNext"
            android:id="@+id/sampNum_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/sampNum_txt" />

        <TextView
            android:id="@+id/collectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collectName_lbl" />

        <EditText
            android:imeOptions="actionDone"
            android:inputType="text"
            android:id="@+id/collectName_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/collectName_txt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="147dp"
            android:layout_gravity="top|center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/collect_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:minWidth="80dp"
                android:text="@string/collect" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/collectSave" />
            
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
