<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/cmd_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cmd_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/cmd_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/cmd_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cmd_lbl"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:lines="1" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmd_txt"
        android:layout_centerHorizontal="true"
        android:text="@string/send_btn" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/send_btn"
        android:layout_marginTop="14dp"
        android:text="@string/rcv_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/rcv_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:gravity="bottom"
        android:text="" />

</RelativeLayout>